# Telegram_AI_Bot

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
deploy/: setup-vps.sh  telegram-ai-bot.service
tests/: conftest.py  test_helpers.py
